# test_task_nebus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260421_01_create_payments_and_outbox.py
postman/: async-payments-service.postman_collection.json
src/: app.py  consumer_app.py  main.py  outbox_worker_app.py
src/payments/create_payment/: __init__.py  repository.py  routes.py  schemas.py  services.py
src/payments/get_payment/: __init__.py  repository.py  routes.py  schemas.py  services.py
src/payments/outbox/: __init__.py  publisher.py  repository.py  schemas.py  services.py  worker.py
src/payments/process_payment/: __init__.py  consumer.py  repository.py  schemas.py  services.py
src/payments/shared/: __init__.py  auth.py  config.py  db.py  di.py  enums.py  exceptions.py  models.py
src/payments/webhook/: __init__.py  client.py  retry.py  services.py
tests/: conftest.py  test_imports.py
tests/create_payment/: test_create_payment_route.py  test_idempotency_race.py
tests/e2e/: test_payment_flow.py
tests/get_payment/: test_get_payment_route.py
tests/outbox/: test_publisher.py  test_worker_resilience.py
tests/process_payment/: test_consumer.py  test_consumer_retry_dlq.py
tests/shared/: test_auth.py  test_compose_init_container.py  test_dependencies_config.py  test_dishka_integration.py  test_enums.py  test_models.py
tests/webhook/: test_retry_and_dlq.py
